Fixed the bug on the StudyPage=files in IE6 and 7, when you mouseover the "Download as..." link and the drop down menu displays behind the "Download as..." link that is in the next file row below.

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -673,13 +673,18 @@ a.vdcStudyFileSubsetAnalysisLink:active, a.vdcStudyFileSubsetAnalysisLink:visite
     padding: 0;
 }
 .downloadas {
-    position: relative;
+    
 }
 .downloadas li {
-    float: left;
     margin: 0;
     padding: 0;
+    display: block;
     position: relative;
+    z-index: 5;
+}
+.downloadas li:hover {
+    z-index: 10000;
+    white-space: normal;
 }
 .downloadas li img {
     border: 0;
@@ -742,12 +747,13 @@ a.vdcStudyFileSubsetAnalysisLink:active, a.vdcStudyFileSubsetAnalysisLink:visite
     position: absolute;
     top: -999em;
     left: -1px;
-    z-index: 1000;
+    z-index: 10;
 }
 .downloadas li:hover ul,
 .downloadas li.sfHover ul {
     top: 16px;
     left: 25px;
+    border: 0;
 }
 .downloadas ul li {
     border: 0;
